src/test/c/reject/41-mixed-decorators-error.arcx
@exposed @unknown @eternal variable: int = 5; 